--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = mobs_mc
 depends = default, mobs
-optional_depends = x_bows, bonemeal
+optional_depends = x_bows, bonemeal, nether, cloudlands
