--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = mobs_mc
 depends = default, mobs
-optional_depends = nether, cloudlands, mobs_animal, farming
+optional_depends = nether, cloudlands, mobs_animal, farming, bonemeal
