--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = mobs_mc
 depends = default, mobs
-optional_depends = nether, cloudlands, mobs_animal, farming, bonemeal, mob_horse, animalworld. underch
+optional_depends = nether, cloudlands, mobs_animal, farming, bonemeal, animalworld. underch, aqua_farming
