--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = mobs_mc
 depends = default, mobs
-optional_depends = nether, cloudlands, mobs_animal, farming, bonemeal, animalworld. underch, aqua_farming, gadgets_consumables, 3d_armor
+optional_depends = nether, cloudlands, mobs_animal, farming, bonemeal, animalworld. underch, aqua_farming, gadgets_consumables, 3d_armor, bedrock2, nextgen_bedrock
