--- a/mod.conf
+++ b/mod.conf
@@ -2,4 +2,4 @@ name = mobs_mc
 title = Minecraft Mobs
 description = Adds mobs like minecraft.
 depends = default, mobs
-optional_depends = nether, cloudlands, mobs_animal, farming, bonemeal, animalworld, underch, aqua_farming, gadgets_consumables, 3d_armor, bedrock2, nextgen_bedrock, mobs_npc, lootchests_default, dungeon_loot, bones_loot, handle_schematics
+optional_depends = nether, cloudlands, mobs_animal, farming, bonemeal, animalworld, underch, aqua_farming, gadgets_consumables, 3d_armor, bedrock2, nextgen_bedrock, lootchests_default, dungeon_loot, bones_loot, handle_schematics
